--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /coverage
 
 # production
+/.firebase
 /build
 
 # misc
@@ -17,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
